fixed overflow issue

--- a/stylesheets/scss/style.scss
+++ b/stylesheets/scss/style.scss
@@ -265,6 +265,7 @@ p { margin: 0 0 28px 0; padding: 0; }
   
 /* grid */
   .grid {
+    overflow: hidden;
     width: 485px; height: 485px; float: left; background: white;
     &.grid-right { float: right; }
     img { display: block; }
